第一个可用测试版

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,6 @@
-<idea-plugin version="2">
+<idea-plugin>
 	<id>org.manymobi.jetbrains.esdsl</id>
-	<name>Esdsl Jetbrains Plugin</name>
-	<version>0.1</version>
+	<name>Esdsl</name>
 	<vendor email="631583871@qq.com" url="https://github.com/manymobi/esdsl-jetbrains-plugin">
 		Esdsl Jetbrains Plugin
 	</vendor>
@@ -11,29 +10,27 @@
 
 <p>
 <a href="https://github.com/manymobi/esdsl-jetbrains-plugin">Github source</a>
+<a href="https://github.com/manymobi/esdsl-core">Esdsl</a>
+<a href="https://github.com/manymobi/esdsl-spring">Esdsl Spring</a>
   ]]></description>
 	
 	<change-notes><![CDATA[
         ]]>
 	</change-notes>
 	
-	<!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
-	<idea-version since-build="133"/> <!-- requires 13.x, 14.x, 15.x -->
+	<idea-version since-build="211.6693" until-build="211.*"/>
+	<idea-version since-build="212.4746.92" until-build="212.*"/>
 	
 	<!-- please see http://confluence.jetbrains.net/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
 		 on how to target different products -->
 	<!-- uncomment to enable plugin in all products -->
 	<depends>com.intellij.modules.lang</depends>
+	<depends>com.intellij.modules.java</depends>
+	<depends>com.intellij.modules.platform</depends>
 	
 	<application-components>
 	</application-components>
-	
-	<project-components>
-		<component>
-			<implementation-class>com.manymobi.jetbrains.esdsl.EsdslPluginController</implementation-class>
-		</component>
-	</project-components>
-	
+
 	<actions>
 	</actions>
 	
@@ -58,10 +55,14 @@
 		<lang.commenter language="Esdsl" implementationClass="com.manymobi.jetbrains.esdsl.EsdslCommenter"/>
 		<lang.braceMatcher language="Esdsl"
 		                   implementationClass="com.manymobi.jetbrains.esdsl.EsdslPairedBraceMatcher"/>
+<!--		方法连接-->
+		<codeInsight.lineMarkerProvider language="JAVA" implementationClass="com.manymobi.jetbrains.esdsl.line.JavaEsdslLineMarkerProvider"/>
+		<codeInsight.lineMarkerProvider language="Esdsl"
+		                                implementationClass="com.manymobi.jetbrains.esdsl.line.EsdslLineMarkerProvider"/>
 		<!--		代码格式化-->
-		<lang.formatter language="Esdsl"
-		                implementationClass="com.manymobi.jetbrains.esdsl.formatting.EsdslFormattingModelBuilder"/>
-		<codeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslCodeStyleSettingsProvider"/>
-		<langCodeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslLanguageCodeStyleSettingsProvider"/>
+<!--		<lang.formatter language="Esdsl"-->
+<!--		                implementationClass="com.manymobi.jetbrains.esdsl.formatting.EsdslFormattingModelBuilder"/>-->
+<!--		<codeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslCodeStyleSettingsProvider"/>-->
+<!--		<langCodeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslLanguageCodeStyleSettingsProvider"/>-->
 	</extensions>
 </idea-plugin>
