--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,17 @@ buildscript {
         mavenCentral()
     }
 }
-
 plugins {
-    id "org.jetbrains.intellij" version "0.7.3"
+    id 'java'
+    id "org.jetbrains.intellij" version "1.1.4"
 }
 
-group 'antlr'
+group 'com.manymobi'
 version pluginVersion
 
-apply plugin: 'java'
-apply plugin: 'org.jetbrains.intellij'
 
 
-intellij {
-    version = ideaVersion
 
-    pluginName 'esdsl-intellij-plugin'
-    downloadSources true
-    updateSinceUntilBuild false
-}
 
 repositories {
     mavenLocal()
@@ -30,8 +22,13 @@ repositories {
 
 dependencies {
 //    implementation("org.antlr:antlr4:$antlr4Version")
-    implementation 'com.manymobi:esdsl-core:1.0.0-beta2-SNAPSHOT'
+    implementation 'com.manymobi:esdsl-core:1.0.0-beta2'
     implementation 'org.antlr:antlr4-intellij-adaptor:0.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+intellij {
+    version = ideaVersion
+    plugins = ['java']
 }
 
