--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
-pluginVersion=0.1
+pluginVersion=1.0.0-beta1
 
 # e.g. IC-2016.3.3, IU-2018.2.5 etc
 # For a list of possible values, refer to the section 'com.jetbrains.intellij.idea' at https://www.jetbrains.com/intellij-repository/releases
 #ideaVersion=2018.3.2
 
 ideaVersion=211.6693.111
+#ideaVersion=212.4746.92
 
 # The version of ANTLR v4 that will be used to generate the parser
 antlr4Version=4.9.2
