最低IDEA版本支持到 2019.1

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,8 +18,6 @@
         ]]>
 	</change-notes>
 	
-	<idea-version since-build="211.6693" until-build="211.*"/>
-	<idea-version since-build="212.4746.92" until-build="212.*"/>
 	
 	<!-- please see http://confluence.jetbrains.net/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
 		 on how to target different products -->
@@ -30,7 +28,7 @@
 	
 	<application-components>
 	</application-components>
-
+	
 	<actions>
 	</actions>
 	
@@ -50,19 +48,20 @@
 		
 		<!--		<externalAnnotator language="Esdsl" implementationClass="com.manymobi.jetbrains.esdsl.SampleExternalAnnotator"/>-->
 		
-		<lang.findUsagesProvider language="Esdsl"
-		                         implementationClass="com.manymobi.jetbrains.esdsl.SampleFindUsagesProvider"/>
+		<!--		<lang.findUsagesProvider language="Esdsl"-->
+		<!--		                         implementationClass="com.manymobi.jetbrains.esdsl.SampleFindUsagesProvider"/>-->
 		<lang.commenter language="Esdsl" implementationClass="com.manymobi.jetbrains.esdsl.EsdslCommenter"/>
 		<lang.braceMatcher language="Esdsl"
 		                   implementationClass="com.manymobi.jetbrains.esdsl.EsdslPairedBraceMatcher"/>
-<!--		方法连接-->
-		<codeInsight.lineMarkerProvider language="JAVA" implementationClass="com.manymobi.jetbrains.esdsl.line.JavaEsdslLineMarkerProvider"/>
+		<!--		方法连接-->
+		<codeInsight.lineMarkerProvider language="JAVA"
+		                                implementationClass="com.manymobi.jetbrains.esdsl.line.JavaEsdslLineMarkerProvider"/>
 		<codeInsight.lineMarkerProvider language="Esdsl"
 		                                implementationClass="com.manymobi.jetbrains.esdsl.line.EsdslLineMarkerProvider"/>
 		<!--		代码格式化-->
-<!--		<lang.formatter language="Esdsl"-->
-<!--		                implementationClass="com.manymobi.jetbrains.esdsl.formatting.EsdslFormattingModelBuilder"/>-->
-<!--		<codeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslCodeStyleSettingsProvider"/>-->
-<!--		<langCodeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslLanguageCodeStyleSettingsProvider"/>-->
+		<!--		<lang.formatter language="Esdsl"-->
+		<!--		                implementationClass="com.manymobi.jetbrains.esdsl.formatting.EsdslFormattingModelBuilder"/>-->
+		<!--		<codeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslCodeStyleSettingsProvider"/>-->
+		<!--		<langCodeStyleSettingsProvider implementation="com.manymobi.jetbrains.esdsl.formatting.EsdslLanguageCodeStyleSettingsProvider"/>-->
 	</extensions>
 </idea-plugin>
