--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,11 @@ buildscript {
 }
 plugins {
     id 'java'
-    id "org.jetbrains.intellij" version "1.1.4"
+    id "org.jetbrains.intellij" version "1.1.6"
 }
 
 group 'com.manymobi'
 version pluginVersion
-
-
-
 
 
 repositories {
@@ -21,7 +18,6 @@ repositories {
 }
 
 dependencies {
-//    implementation("org.antlr:antlr4:$antlr4Version")
     implementation 'com.manymobi:esdsl-core:1.0.0-beta2'
     implementation 'org.antlr:antlr4-intellij-adaptor:0.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
@@ -29,6 +25,14 @@ dependencies {
 
 intellij {
     version = ideaVersion
-    plugins = ['java']
+//    plugins = ['java']
 }
 
+
+patchPluginXml{
+    sinceBuild = '191'
+    untilBuild = ''
+}
+
+sourceCompatibility='1.8'
+targetCompatibility='1.8'
