--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 dependencies {
     implementation 'com.manymobi:esdsl-core:1.0.0-beta2'
     implementation 'org.antlr:antlr4-intellij-adaptor:0.1'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testImplementation group: 'junit', name: 'junit', version: '4.11'
 }
 
 intellij {
