--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,12 @@
-pluginVersion=1.0.0-beta2
+pluginVersion=1.0.0-beta5
 
 # e.g. IC-2016.3.3, IU-2018.2.5 etc
 # For a list of possible values, refer to the section 'com.jetbrains.intellij.idea' at https://www.jetbrains.com/intellij-repository/releases
 #ideaVersion=2018.3.2
 #https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions
-ideaVersion=191.4212.41
+#ideaVersion=191.4212.41
 #ideaVersion=211.6693.111
 #ideaVersion=212.4746.92
-
+#ideaVersion=213.6777.52
+#ideaVersion=221.5787.30
+ideaVersion=221.5080.210
